# onecanvas

./: .gitignore  README.md  package-lock.json  package.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend/dev/cert/: _cert.pem
frontend/src/: app.html  main.js
frontend/src/lib/: XRGestures.js  store.ts
frontend/src/routes/: +layout.svelte  +page.svelte
server/: Cargo.toml
server/src/: main.rs
viewer/: Cargo.toml
viewer/src/: main.rs
