[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
axum = { version = "0.7.5", features = ["ws", "macros"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.30"
glam = { version = "0.29.0", features = ["serde"] }
kdtree = "0.7.0"
log = "0.4.22"
mongodb = "3.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
